test/conformance/chainsaw/verifyImages/clusterpolicy/standard/mutateDigest-noverifyDigest-norequired/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutatedigest-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
